// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyntaxHighlighter renders jsx highlighted text 1`] = `
<pre
  style={
    {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    className="language-jsx"
    style={
      {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "fontSize": "1em",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      import
    </span>
    <span
      style={{}}
    >
       React 
    </span>
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      from
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#690",
        }
      }
    >
      "react"
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    />
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      import
    </span>
    <span
      style={{}}
    >
       uniquePropHOC 
    </span>
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      from
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#690",
        }
      }
    >
      "./lib/unique-prop-hoc"
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    <span
      style={{}}
    >
      

    </span>
    

    <span
      style={{}}
    />
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      class
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#DD4A68",
        }
      }
    >
      Expire
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      extends
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#DD4A68",
        }
      }
    >
      React
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      className="token"
      style={
        {
          "color": "#DD4A68",
        }
      }
    >
      Component
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      {
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
          
    </span>
    <span
      className="token"
      style={
        {
          "color": "#DD4A68",
        }
      }
    >
      constructor
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className="token parameter"
      style={{}}
    >
      props
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      {
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
              
    </span>
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      super
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      style={{}}
    >
      props
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
              
    </span>
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={{}}
    >
      state 
    </span>
    <span
      className="token"
      style={
        {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      =
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      {
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token literal-property"
      style={
        {
          "color": "#905",
        }
      }
    >
      component
    </span>
    <span
      className="token"
      style={
        {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      :
    </span>
    <span
      style={{}}
    >
       props
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={{}}
    >
      children 
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      }
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
          
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      }
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
          
    </span>
    <span
      className="token"
      style={
        {
          "color": "#DD4A68",
        }
      }
    >
      componentDidMount
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      {
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
              
    </span>
    <span
      className="token"
      style={
        {
          "color": "#DD4A68",
        }
      }
    >
      setTimeout
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      =&gt;
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      {
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      className="token"
      style={
        {
          "color": "#DD4A68",
        }
      }
    >
      setState
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      {
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                      
    </span>
    <span
      className="token literal-property"
      style={
        {
          "color": "#905",
        }
      }
    >
      component
    </span>
    <span
      className="token"
      style={
        {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      :
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      null
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
                  
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      }
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
              
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      }
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      ,
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={{}}
    >
      props
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={{}}
    >
      time 
    </span>
    <span
      className="token"
      style={
        {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      ||
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={{}}
    >
      props
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={{}}
    >
      seconds 
    </span>
    <span
      className="token"
      style={
        {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      *
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#905",
        }
      }
    >
      1000
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
          
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      }
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
          
    </span>
    <span
      className="token"
      style={
        {
          "color": "#DD4A68",
        }
      }
    >
      render
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      {
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
              
    </span>
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      return
    </span>
    <span
      style={{}}
    >
       
    </span>
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={{}}
    >
      state
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={{}}
    >
      component
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    >
          
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      }
    </span>
    <span
      style={{}}
    >
      

    </span>
    <span
      style={{}}
    />
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      }
    </span>
  </code>
</pre>
`;

exports[`SyntaxHighlighter should just render text if syntax is not registered 1`] = `
<pre
  style={
    {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    className="language-python"
    style={
      {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "fontSize": "1em",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    <span
      className="token"
      style={
        {
          "color": "#07a",
        }
      }
    >
      print
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className="token"
      style={
        {
          "color": "#690",
        }
      }
    >
      'hello'
    </span>
    <span
      className="token"
      style={
        {
          "color": "#999",
        }
      }
    >
      )
    </span>
  </code>
</pre>
`;
